@@ -1,6 +1,6 @@
 Package: SASmarkdown
-Version: 0.8.3
-Date: 2023-09-13
+Version: 0.8.4
+Date: 2023-09-21
 Title: 'SAS' Markdown
 Description: Settings and functions to extend the 'knitr' 'SAS' engine.
 Imports: knitr(>= 1.21), xfun(>= 0.4)
